# aieda_agent

./: .cursor.rules  .gitignore  Dockerfile  README.md  aieda_deployment_template.yaml  aieda_model_config.yaml  docker-compose.yml  pyproject.toml
.cursor/commands/: generate-diagram.md
.cursor/rules/: analysis_modes.mdc  communication.mdc  cursorrules.mdc  data_analysis.mdc  development.mdc  gcp-auth.mdc  marimo.mdc  marimo_variable_naming.mdc  notebook.mdc  visualization.mdc
.cursor/rules_background/: analysis_modes.md  communication.md  cursorrules.md  data_analysis.md  development.md  notebook.md  visualization.md
.cursor/tools/: generate_diagram.py
course/: CURRICULUM.md
docs/: COMPREHENSIVE_ANALYSIS_GUIDE.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  data_mart_design.md  semantic_questions_status.md  snowflake_elt_entity.puml  snowflake_elt_entity_notion.mmd  snowflake_elt_entity_notion.puml
docs/assets/: infobox_data.tsv  【CS】解約顧客一覧_25年1月〜 - シート1.csv
notebooks/: 00_README.md  00_comprehensive_eda_analysis_MAIN.py  01_bigquery_datasets_explorer_marimo.py  02_sakurai_yui_eda_interactive_marimo.py  03_sakurai_yui_eda_analysis_runner.py  04_sakurai_yui_visualizations_with_labels.py  05_comprehensive_analysis_coordinator.py  06_gross_market_analysis.py  07_business_simulation.py  08_emotion_network_analysis.py  09_irc_challenge_extractor.py  10_user_id_lookup.py  11_irc_impact_analysis.py  12_snowflake_explorer.py  13_snowflake_infobox_explorer.py  14_dionysus_infobox_explorer.py  15_dionysus_intent_analysis.py  15_snowflake_crm_explorer.py  16_dionysus_ga4_explorer.py  17_ga_orgid_snowflake_mapping.py  18_memo_analysis.py  19_list_csv_analysis.py  20_download_intent_dashboard.py  21_churn_action_analysis.py  22_churn_risk_dashboard.py  23_er_relation_validator.py  bigquery_overview.py  comprehensive_analysis_plan.md  eda_sakurai_yui.py  index.py  phase1_data_collection.py  phase2_basic_statistics.py  phase3_text_mining.py  phase4_comparison_analysis.py  phase5_visualization_report.py  scrape_idol_followers.py  segment_analysis_sample.py  test_phase1_simple.py
notebooks/__marimo__/session/: 02_sakurai_yui_eda_interactive_marimo.py.json  06_gross_market_analysis.py.json  07_business_simulation.py.json  (+8 more)
output/: 09_irc_challenge_extractor.html
scripts/: aieda_model_manager.py  generate_gross_market_report.py  start_comprehensive_analysis.sh
src/ai_data_lab/: ports.py
src/ai_data_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/integration/: test_bigquery_integration.py
tests/unit/: test_bigquery_connector.py  test_marimo_launcher.py  test_parallel_coordinator.py  test_ports.py  test_session_registry.py
(+6 files in other folders)
