[project]
name = "ai-data-lab"
version = "0.1.0"
description = "AIと協調しながらBigQuery/S3/Google Sheets/DuckDBに接続できるmarimoベースのデータ分析環境。"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "kou1904" }
]
dependencies = [
  "marimo>=0.7.0",
  "duckdb>=1.1.2",
  "polars>=1.9.0",
  "pandas>=2.2.2",
  "pyarrow>=17.0.0",
  "google-cloud-bigquery>=3.25.0",
  "google-cloud-bigquery-storage>=2.26.0",
  "db-dtypes>=1.2.0",
  "boto3>=1.35.0",
  "s3fs>=2024.6.1",
  "gspread>=6.0.2",
  "pydantic-settings>=2.6.1",
  "python-dotenv>=1.0.1",
  "fsspec>=2024.6.1",
  "rich>=13.9.4",
  "pyvis>=0.3.2",
  "google-generativeai>=0.8.0",
  "wordcloud>=1.9.3",
  "scikit-learn>=1.3.0",
  "janome>=0.5.0",
  "networkx>=3.0",
  "seaborn>=0.13.0",
  "matplotlib>=3.7.0",
  "google-genai>=1.52.0",
  "pillow>=12.0.0",
  "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-dotenv>=0.5.2",
  "pytest-mock>=3.14.0",
  "pytest-cov>=6.0.0"
]
eda = [
  "ydata-profiling>=4.8.3",
  "autoviz>=0.1.905",
  "bokeh>=3.6.0",
  "squarify>=0.4.3"
]

[tool.uv]
package = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
markers = [
  "integration: BigQuery/S3/Sheetsなど外部接続が必要なテスト",
  "eda: YData ProfilingやAutoVizを伴う重いテスト"
]

[tool.pytest_env]
PYTHONHASHSEED = "0"

[tool.marimo.runtime]
output_max_bytes = 20_000_000

